--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,6 @@ input {
   font-size: 1.8rem;
 }
 
-.tip-per-btns {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-  justify-items: center;
-}
 form:first-child {
   margin-bottom: 2rem;
 }
@@ -82,30 +76,15 @@ form:hover {
   flex-direction: column;
   gap: 2.5rem;
 }
-.input-first-paragraph {
+.input-first-paragraph,
+.input-third-h5,
+.input-second-h5 {
   color: var(--dark-greyish-cyan);
   font-weight: 600;
   opacity: 0.7;
   margin-bottom: 1rem;
 }
-.input-second-h5 {
-  margin-bottom: 1rem;
-  color: var(--greyish-cyan);
-}
-.tip-per-btn {
-  text-decoration: none;
-  color: var(--white);
-  background: var(--very-dark-cyan);
-  padding: 0.8rem 2.5rem;
-  border-radius: 0.8rem;
-  transition: all 0.7s ease-in-out;
-  font-weight: 600;
-}
-.tip-per-btn:hover,
-.tip-per-btn:active {
-  background: rgba(67, 226, 205, 0.699);
-  color: var(--very-dark-cyan);
-}
+
 /* 
  */
 /* 
